# tavily-open

./: .env.example  .gitignore  .pre-commit-config.yaml  CACHE_GUIDE.md  CACHE_IMPLEMENTATION.md  DOCKER_PROFILES.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
searxng/: limiter.toml  settings.yml
src/searcrawl/: __init__.py  cache.py  config.py  crawler.py  logger.py  main.py  reader.py
tests/: __init__.py  test_api.py  test_config.py  test_crawler.py
